# Full-Coverage-Path-Planning-on-TurtleBot3-Qualcomm-RB5

./: README.md
assests/TURTLEBOT3_FULL_COVERAGE_PATH_PLANNER/robot_cleaning_services/: CMakeLists.txt  package.xml
assests/TURTLEBOT3_FULL_COVERAGE_PATH_PLANNER/robot_cleaning_services/scripts/: cleaning.py  dummy.py  occupancy_grid.py
assests/TURTLEBOT3_FULL_COVERAGE_PATH_PLANNER/robot_description/robot_description/: package.xml
assests/TURTLEBOT3_FULL_COVERAGE_PATH_PLANNER/robot_gazebo/: CMakeLists.txt  package.xml
assests/TURTLEBOT3_FULL_COVERAGE_PATH_PLANNER/robot_gazebo/launch/: demo.launch  gazebo.launch  test.launch
assests/TURTLEBOT3_FULL_COVERAGE_PATH_PLANNER/robot_global_planner/: CMakeLists.txt  package.xml  robot_global_planner_plugin.xml
assests/TURTLEBOT3_FULL_COVERAGE_PATH_PLANNER/robot_global_planner/include/: robot_global_planner copy.h  robot_global_planner.h
assests/TURTLEBOT3_FULL_COVERAGE_PATH_PLANNER/robot_global_planner/msg/: PoseList.msg  WayPoint.msg
assests/TURTLEBOT3_FULL_COVERAGE_PATH_PLANNER/robot_global_planner/script/: plan_tester.py  plan_tester_.py
assests/TURTLEBOT3_FULL_COVERAGE_PATH_PLANNER/robot_global_planner/src/: robot_global_planner.cpp  robot_global_planner_copy.cpp
assests/TURTLEBOT3_FULL_COVERAGE_PATH_PLANNER/robot_global_planner/srv/: GetPlan.srv
assests/TURTLEBOT3_FULL_COVERAGE_PATH_PLANNER/robot_navigation/: CMakeLists.txt  package.xml
assests/TURTLEBOT3_FULL_COVERAGE_PATH_PLANNER/robot_navigation/config/: sbpl.yaml
assests/TURTLEBOT3_FULL_COVERAGE_PATH_PLANNER/robot_navigation/launch/: amcl.launch  cleaning.launch  cleaning_navig.launch  gmapping.launch  move_base.launch  navigation.launch  rb5_FCPP.launch
assests/TURTLEBOT3_FULL_COVERAGE_PATH_PLANNER/robot_navigation/maps/: map.pgm  map.yaml
assests/TURTLEBOT3_FULL_COVERAGE_PATH_PLANNER/robot_navigation/param/: costmap_common_params_burger.yaml  dwb_local_planner_params.yaml  move_base_params.yaml
assests/TURTLEBOT3_FULL_COVERAGE_PATH_PLANNER/robot_navigation/rviz/: fcpp.rviz  navigation.rviz
assests/TURTLEBOT3_FULL_COVERAGE_PATH_PLANNER/robot_navigation/scripts/: intial_pose_estimation.py
